[tool.poetry]
name = "pyob"
version = "0.1.0"
description = "A high-level runtime object manager for Python 3 and above."
authors = ["Sean Michael O'Leary <seamicole@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
inflect = "^6.0.2"
pydantic = "^1.10.2"
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
hypothesis = "^6.56.4"
notebook = "^6.5.2"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
